Gjort inkommande utl configurerbar och brutit isär routen för at skilja hur man kopplar upp sig från övriga logiken så att man senare kan lägga till https.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 # the name of Camel
 camel.springboot.name = VP-Camel
 
+vp.http.route.url = http://localhost:12312/vp
+
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
 #camel.springboot.duration-max-messages=100
