--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -3,7 +3,7 @@
 # Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
 
 # the name of Camel
-camel.springboot.name = VP-Camel
+camel.springboot.name = VP-Camel-Test
 
 vp.instance.id=dev_env
 
@@ -33,7 +33,7 @@ endpoints.camelroutes.read-only = true
 #logging.level.sample.camel = DEBUG
 
 # Security settings
-TP_TLS_STORE_LOCATION = C:/SpringBootVP/certs/
+TP_TLS_STORE_LOCATION = certs/
 
 TP_TLS_STORE_TRUSTSTORE_TYPE = jks
 TP_TLS_STORE_TRUSTSTORE_FILE = truststore.jks
@@ -49,7 +49,7 @@ TP_TLS_STORE_CONSUMER_FILE = client.jks
 TP_TLS_STORE_CONSUMER_PASSWORD = password
 TP_TLS_STORE_CONSUMER_KEY_PASSWORD = password
 
-certificate.senderid.subject=SERIALNUMBER
+certificate.senderid.subject=OU
 
 #comma seperated
 ip.whitelist=
