--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -33,23 +33,26 @@ endpoints.camelroutes.read-only = true
 #logging.level.sample.camel = DEBUG
 
 # Security settings
-TP_TLS_STORE_LOCATION = C:/SpringBootVP/certs/
+tp.tls.store.location = C:/SpringBootVP/certs/
 
-TP_TLS_STORE_TRUSTSTORE_TYPE = jks
-TP_TLS_STORE_TRUSTSTORE_FILE = truststore.jks
-TP_TLS_STORE_TRUSTSTORE_PASSWORD = password
+tp.tls.store.truststore.type = jks
+tp.tls.store.truststore.file = truststore.jks
+tp.tls.store.truststore.password = password
 
-TP_TLS_STORE_PRODUCER_TYPE = jks
-TP_TLS_STORE_PRODUCER_FILE = tp.jks
-TP_TLS_STORE_PRODUCER_PASSWORD = password
-TP_TLS_STORE_PRODUCER_KEY_PASSWORD = password
+tp.tls.store.producer.type = jks
+tp.tls.store.producer.file = tp.jks
+tp.tls.store.producer.password = password
+tp.tls.store.producer.key.password = password
 
-TP_TLS_STORE_CONSUMER_TYPE = jks
-TP_TLS_STORE_CONSUMER_FILE = client.jks
-TP_TLS_STORE_CONSUMER_PASSWORD = password
-TP_TLS_STORE_CONSUMER_KEY_PASSWORD = password
+tp.tls.store.consumer.type = jks
+tp.tls.store.consumer.file = client.jks
+tp.tls.store.consumer.password = password
+tp.tls.store.consumer.key.password = password
 
 certificate.senderid.subject=SERIALNUMBER
+
+allowed.incoming.protocols=TLSv1.0,TLSv1.1,TLSv1.2
+allowed.outgoing.protocols=TLSv1.0,TLSv1.1,TLSv1.2
 
 #comma seperated
 ip.whitelist=
