Lite början på loggning

--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>camel-stax</artifactId>
     </dependency>
 
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-1.2-api</artifactId>
+      </dependency>
+
   </dependencies>
 
   <profiles>
