--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -55,4 +55,4 @@ allowed.incoming.protocols=TLSv1,TLSv1.1,TLSv1.2
 allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 
 #comma seperated
-ip.whitelist=
+ip.whitelist="1.2.3.4,5.6.7.8"
