add log4j2 loggning

--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -26,6 +26,10 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-tomcat</artifactId>
         </exclusion>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+          </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -75,10 +79,17 @@
       <artifactId>camel-stax</artifactId>
     </dependency>
 
-      <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-1.2-api</artifactId>
-      </dependency>
+    <!-- logging -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>
+    <!-- for async logging -->
+    <dependency>
+      <groupId>com.lmax</groupId>
+      <artifactId>disruptor</artifactId>
+      <version>${lmax_disruptor-version}</version>
+    </dependency>
 
   </dependencies>
 
