Fix i hur vi plockar ut ipadress så att adress som skickas från proxy som header hämtas först.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -50,6 +50,7 @@ tp.tls.store.consumer.password = password
 tp.tls.store.consumer.key.password = password
 
 certificate.senderid.subject=SERIALNUMBER
+vagvalrouter.sender.ip.adress.http.header=X-Forwarded-For
 
 allowed.incoming.protocols=TLSv1,TLSv1.1,TLSv1.2
 allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
