add HsaCache bean och Processor för reset cache

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -7,8 +7,12 @@ camel.springboot.name = VP-Camel
 
 vp.instance.id=dev_env
 
-vp.http.route.url = http://localhost:12312/vp
-vp.https.route.url = https://localhost:443/vp
+vp.host=localhost
+vp.http.route.url = http://${vp.host}:12312/vp
+vp.https.route.url = https://${vp.host}:443/vp
+
+vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
+vp.reset.cache.url=http://${vp.host}:23000/resetcache
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
@@ -33,7 +37,7 @@ endpoints.camelroutes.read-only = true
 #logging.level.sample.camel = DEBUG
 
 # Security settings
-tp.tls.store.location = C:/SpringBootVP/certs/
+tp.tls.store.location = c:/ntjp/vp-camel_crt/
 
 tp.tls.store.truststore.type = jks
 tp.tls.store.truststore.file = truststore.jks
@@ -56,4 +60,8 @@ allowed.incoming.protocols=TLSv1,TLSv1.1,TLSv1.2
 allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 
 #comma seperated
-ip.whitelist=
+ip.whitelist=127.0.0.1
+
+
+# List if files to be read by HSA cache, first file is master, rest is complementary
+hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
