--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -91,6 +91,12 @@
       <version>${lmax_disruptor-version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>se.skltp.hsa-cache</groupId>
+      <artifactId>hsa-cache</artifactId>
+      <version>1.0.2-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
 
   <profiles>
