--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -7,8 +7,12 @@ camel.springboot.name = VP-Camel-Test
 
 vp.instance.id=dev_env
 
-vp.http.route.url = http://localhost:12312/vp
-vp.https.route.url = https://localhost:443/vp
+vp.host=localhost
+vp.http.route.url = http://${vp.host}:12312/vp
+vp.https.route.url = https://${vp.host}:443/vp
+
+vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
+vp.reset.cache.url=http://${vp.host}:23000/resetcache
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
@@ -55,6 +59,9 @@ vagvalrouter.sender.ip.adress.http.header=X-Forwarded-For
 allowed.incoming.protocols=TLSv1,TLSv1.1,TLSv1.2
 allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 
+
+vagvalrouter.default.routing.address.delimiter=#
 #comma seperated
 ip.whitelist=1.2.3.4,5.6.7.8
 
+hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
