--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # Information om property hantering
 # https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html#boot-features-external-config-application-property-files
-# Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
+# Lï¿½gger man en application.properties i en undermapp med namn config/ dï¿½r man kï¿½r jar filen sï¿½ overidear vï¿½rden dï¿½rifrï¿½n vï¿½rden frï¿½n denna fil.
 
 # the name of Camel
 camel.springboot.name = VP-Camel-Test
@@ -8,7 +8,9 @@ camel.springboot.name = VP-Camel-Test
 vp.instance.id=dev_env
 
 vp.http.route.url = http://localhost:12312/vp
-vp.https.route.url = https://localhost:443/vp
+vp.https.route.url = https://localhost:448/vp
+#vp.http.route.url = http://localhost:12312/vp
+#vp.https.route.url = https://localhost:443/vp
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
@@ -57,3 +59,10 @@ allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 
 #comma seperated
 ip.whitelist=1.2.3.4,5.6.7.8
+
+# Defines if we should use old style default routing (VG#VE) when
+#  evaluating vÃ¤gval and behÃ¶righeter. Set this to blank to
+#  turn default routing off.
+vagvalrouter.default.routing.address.delimiter=#
+
+server.port = 8085
