--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -91,6 +91,10 @@
       <version>${lmax_disruptor-version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
