HSA cache instansieras nu när Camel Context startas

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -82,3 +82,10 @@ hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsaca
 #  evaluating vägval and behörigheter. Set this to blank to
 #  turn default routing off.
 vagvalrouter.default.routing.address.delimiter=#
+
+
+takcache.use.behorighet.cache=true
+takcache.use.vagval.cache=true
+takcache.vagval.persistent.file.name=
+takcache.behorighet.persistent.file.name=
+takcache.endpoint.address=http://localhost:8080/tak-services/SokVagvalsInfo/v2
