Wsdl och Timeout first checking to do merge from develop

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -80,11 +80,10 @@ server.port = 8085
 # Defines if we should use old style default routing (VG#VE) when
 #  evaluating vägval and behörigheter. Set this to blank to
 #  turn default routing off.
-<<<<<<< HEAD
-vagvalrouter.default.routing.address.delimiter=#
-=======
 vagvalrouter.default.routing.address.delimiter=#
 
 hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
 
->>>>>>> f1ac64463bf8ad1bb39608c563f3a2e2bf3e59a7
+timeout.json.file=timeoutconfig.json
+wsdl.json.file=wsdlconfig.json
+wsdlfiles.directory=C:/wsdl/
