--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -37,7 +37,7 @@ endpoints.camelroutes.read-only = true
 #logging.level.sample.camel = DEBUG
 
 # Security settings
-tp.tls.store.location = certs/
+tp.tls.store.location = C:/SpringBootVP/certs/
 
 tp.tls.store.truststore.type = jks
 tp.tls.store.truststore.file = truststore.jks
@@ -89,3 +89,7 @@ takcache.use.vagval.cache=true
 takcache.vagval.persistent.file.name=
 takcache.behorighet.persistent.file.name=
 takcache.endpoint.address=http://localhost:8080/tak-services/SokVagvalsInfo/v2
+
+timeout.json.file=C:/Inera/skltp-incubator/vp-camel/vp-services-camel/src/main/resources/timeoutconfig.json
+wsdl.json.file=C:/Inera/skltp-incubator/vp-camel/vp-services-camel/src/main/resources/wsdlconfig.json
+wsdlfiles.directory=C:/wsdl/
