Lagt till felhantering i wsdl och timeoutconfig.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -90,6 +90,7 @@ takcache.vagval.persistent.file.name=
 takcache.behorighet.persistent.file.name=
 takcache.endpoint.address=http://localhost:8080/tak-services/SokVagvalsInfo/v2
 
-timeout.json.file=C:/Inera/skltp-incubator/vp-camel/vp-services-camel/src/main/resources/timeoutconfig.json
-wsdl.json.file=C:/Inera/skltp-incubator/vp-camel/vp-services-camel/src/main/resources/wsdlconfig.json
+timeout.json.file=timeoutconfig.json
+timeout.json.file.default.tjanstekontrakt.name=default_timeouts
+wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/wsdl/
