--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -85,5 +85,6 @@ vagvalrouter.default.routing.address.delimiter=#
 hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
 
 timeout.json.file=timeoutconfig.json
+timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/wsdl/
