Har använt @ConfigurationProperties för att dela upp property-filer, detta förändrar lite hur properties används och bör därför diskuteras i teamet om det är något som ska göras. Se tex SSLContextParametersConfig.java och SecurityProperies.java (felstavat namn), den sista skulle kunna se bättre ut om man inför Project Lombok.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
         <artifactId>spring-boot-actuator</artifactId>
         <version>${spring.boot-version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-configuration-processor</artifactId>
+        <version>${spring.boot-version}</version>
+      </dependency>
 
       <!-- Camel -->
       <dependency>
