--- a/vp-services-camel/src/main/resources/vp-messages.properties
+++ b/vp-services-camel/src/main/resources/vp-messages.properties
@@ -9,4 +9,4 @@ VP008 = No contact with TAK at startup, and no local cache to fallback on, not p
 VP009 = Error connecting to service producer at address {}
 VP010 = Physical Address field is empty in Service Producer for {}
 VP011 = Caller was not on the white list of accepted IP-addresses. {}
-VP012 = Severe problem, VP does not have all necessary resources to operate. {}
+VP012 = Server problem, VP does not have all necessary resources to operate. {}
