--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,26 @@
     <camel.version>2.21.1</camel.version>
   </properties>
 
+  <distributionManagement>
+    <repository>
+      <id>release-nexus</id>
+      <name>Release Nexus</name>
+      <url>${releases-nexus-url}</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshot-nexus</id>
+      <name>Snapshot Nexus</name>
+      <url>${snapshot-nexus-url}</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <url>https://github.com/skltp-incubator/vp-camel.git</url>
+    <connection>scm:git:https://github.com:443/skltp-incubator/vp-camel.git</connection>
+    <developerConnection>scm:git:https://github.com:443/skltp-incubator/vp-camel.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <modules>
     <module>vp-services-camel</module>
   </modules>
