--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -71,6 +71,10 @@ vagvalrouter.default.routing.address.delimiter=#
 
 hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
 
+takcache.use.behorighet.cache=true
+takcache.use.vagval.cache=true
+takcache.endpoint.address=http://localhost:8086/tak-services/SokVagvalsInfo/v2
+
 timeout.json.file=timeoutconfig.json
 timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
