--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -45,17 +45,22 @@
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
 
      <!--skltp-->
     <dependency>
-      <groupId>se.skltp.hsa-cache</groupId>
-      <artifactId>hsa-cache</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <groupId>se.skltp.takdatahandler</groupId>
+      <artifactId>behorighethandler</artifactId>
+      <version>1.0.0-RC2</version>
     </dependency>
-   <dependency>
-      <groupId>se.skltp.takcache</groupId>
-      <artifactId>takcache</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    <dependency>
+      <groupId>se.skltp.takdatahandler</groupId>
+      <artifactId>vagvalhandler</artifactId>
+      <version>1.0.0-RC2</version>
     </dependency>
 
     <!-- Camel -->
