--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <description>SKLTP VP Services byggt med Camel och Spring Boot</description>
 
+
   <dependencies>
 
     <!-- Spring Boot -->
@@ -26,10 +27,10 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-tomcat</artifactId>
         </exclusion>
-          <exclusion>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
-          </exclusion>
+          <!--<exclusion>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-logging</artifactId>-->
+          <!--</exclusion>-->
       </exclusions>
     </dependency>
     <dependency>
@@ -116,6 +117,13 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet-api-version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
