--- a/jenkins/jobs/develop_build_job/Jenkinsfile
+++ b/jenkins/jobs/develop_build_job/Jenkinsfile
@@ -1,35 +1,40 @@
 pipeline {
     agent any
-      
+
     stages {
-        
-        stage('Preparation') {
-            environment { 
-                REPO_BRANCH = 'develop'
-                REPO_URL = 'https://github.com/skltp-incubator/vp-camel.git'
-            }
-            steps {
-                echo 'Cleaning workspace..'
-                cleanWs()
-                
-                echo 'Cloning repository...'
-                git branch: REPO_BRANCH, url: REPO_URL
-            }
-        }
-        
+
         stage('Build') {
-            steps{
-                echo 'Compiling, testing and building...'
-                sh label: '', script: 'mvn clean package'   
+            agent {
+                docker {
+                    image 'maven:3.6.0-jdk-8-alpine'
+                    reuseNode true
+                }
             }
+            steps{
+                echo 'Starting Build stage...'
+                configFileProvider([configFile(fileId: 'byggReleaseConfig', variable: 'MAVEN_SETTINGS')]) {
+                    sh 'pwd'
+                    echo 'Compiling, testing and building...'
+                    sh 'mvn --global-settings ${MAVEN_SETTINGS} -P test-coverage clean install'
+                }
+            }     
         }
         
         stage('Results'){
             steps{
+                echo 'Starting Results stage...'
                 junit '**/target/surefire-reports/TEST-*.xml'
-                archiveArtifacts '**/target/*.jar'    
+                archiveArtifacts '**/target/*.jar'
+                archiveArtifacts '**/target/*.zip'     
             }
         }
         
+    }
+
+    post { 
+        always {
+            echo 'Cleaning workspace...'
+            cleanWs()
+        }
     }
 }
