Reading propagateCorrelationIdForHttps from properties, plus other small changes.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -62,6 +62,9 @@ allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 #comma-separated
 ip.whitelist=127.0.0.1
 
+#Property if correlation id is to be propagated to producer or not, for HTTPS traffic
+propagateCorrelationIdForHttps=false
+
 # List if files to be read by HSA cache, first file is master, rest is complementary
 hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
 
