Reading propagateCorrelationIdForHttps from properties, also in test.

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -62,6 +62,9 @@ allowed.outgoing.protocols=TLSv1,TLSv1.1,TLSv1.2
 #comma seperated
 ip.whitelist=1.2.3.4,5.6.7.8
 
+#Property if correlation id is to be propagated to producer or not, for HTTPS traffic
+propagateCorrelationIdForHttps=false
+
 server.port = 8085
 
 # Defines if we should use old style default routing (VG#VE) when
