--- a/jenkins/jobs/develop_build_job/Jenkinsfile
+++ b/jenkins/jobs/develop_build_job/Jenkinsfile
@@ -1,26 +1,24 @@
 pipeline {
     agent any
-
     environment{
-        JAVA_HOME = tool name: 'Java 8_152'
+        JDK_PATH = tool name: 'Java 8_152'
+        JAVA_HOME = "${JDK_PATH}"
+        CONFIG_FILE_ID = 'byggReleaseConfig'
+        MAVEN_IMAGE = 'maven:3.6-jdk-8'
     }
 
     stages {
-        stage('Preparation') {
-            steps {
-                echo "${JAVA_HOME}"
-            }
-        }
         stage('Build') {
             agent {
                 docker {
-                    image 'maven:3.6.0-jdk-8-alpine'
+                    image '${MAVEN_IMAGE}'
+                    args '-v ${JDK_PATH}:${JDK_PATH}'
                     reuseNode true
                 }
             }
             steps {
                 echo 'Starting Build stage...'
-                configFileProvider([configFile(fileId: 'byggReleaseConfig', variable: 'MAVEN_SETTINGS')]) {
+                configFileProvider([configFile(fileId: "${CONFIG_FILE_ID}", variable: 'MAVEN_SETTINGS')]) {
                     sh 'pwd'
                     echo 'Compiling, testing and building...'
                     sh 'mvn --global-settings ${MAVEN_SETTINGS} clean install'
@@ -30,16 +28,29 @@ pipeline {
     }
 
     post {
-        success {
-            echo 'Build succeeded'
-        }
-
         always {
             echo 'Starting results handling...'
             junit '**/target/surefire-reports/TEST-*.xml'
             jacoco()
             archiveArtifacts '**/target/*.jar'
+        }
 
+        unsuccessful {
+            echo "Build unsuccessful"
+            emailext attachLog: true, recipientProviders: [[$class: 'CulpritsRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: "Build failed in Jenkins: ${JOB_NAME}#${BUILD_NUMBER}", body: "See ${BUILD_URL} for details."
+        }
+
+        changed {
+            script {
+                if ("${currentBuild.currentResult}" == 'SUCCESS') {
+                    echo "Current build successful, previous build was unsuccessful"
+                    echo "${JOB_NAME} back to stable, body: See ${BUILD_URL} for details."
+                    emailext attachLog: true, recipientProviders: [[$class: 'CulpritsRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: "${JOB_NAME} back to stable", body: "See ${BUILD_URL} for details."
+                }
+            }
+        }
+
+        cleanup {
             echo 'Cleaning workspace...'
             cleanWs()
         }
