--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.apache.camel</groupId>
-    <artifactId>camel-parent</artifactId>
-    <version>2.23.1</version>
-  </parent>
+  <!--<parent>-->
+    <!--<groupId>org.apache.camel</groupId>-->
+    <!--<artifactId>camel-parent</artifactId>-->
+    <!--<version>2.23.1</version>-->
+  <!--</parent>-->
 
   <groupId>se.skltp.vp</groupId>
   <artifactId>vp-parent-camel</artifactId>
@@ -17,11 +17,12 @@
   <description>SKLTP VP Services byggt med Camel och Spring Boot</description>
 
   <properties>
+    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.boot-version>${spring-boot-version}</spring.boot-version>
+    <spring.boot-version>2.1.0.RELEASE</spring.boot-version>
     <lmax_disruptor-version>3.3.6</lmax_disruptor-version>
-    <commons.lang-version>${commons-lang-version}</commons.lang-version>
+    <commons.lang-version>2.6</commons.lang-version>
     <camel.version>2.23.1</camel.version>
     <javax.servlet-api-version>4.0.1</javax.servlet-api-version>
   </properties>
@@ -193,9 +194,18 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring-boot-version}</version>
+        <version>${spring.boot-version}</version>
         <executions>
           <execution>
             <goals>
