--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -24,6 +26,23 @@
     <commons.lang-version>${commons-lang-version}</commons.lang-version>
     <camel.version>2.23.1</camel.version>
     <javax.servlet-api-version>4.0.1</javax.servlet-api-version>
+
+    <!-- ************************-->
+    <!-- Sonar/Reporting settings -->
+    <!-- ************************-->
+    <jacoco.plugin.version>0.8.2</jacoco.plugin.version>
+    <sonar.plugin.version>3.5.0.1254</sonar.plugin.version>
+
+    <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
+    <jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
+    <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+    <jacoco.reportPath>${project.basedir}/../target/jacoco.exec</jacoco.reportPath>
+
+    <sonar.language>java</sonar.language>
+    <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+    <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
   </properties>
 
   <distributionManagement>
@@ -42,7 +61,8 @@
   <scm>
     <url>https://github.com/skltp-incubator/vp-camel.git</url>
     <connection>scm:git:https://github.com:443/skltp-incubator/vp-camel.git</connection>
-    <developerConnection>scm:git:https://github.com:443/skltp-incubator/vp-camel.git</developerConnection>
+    <developerConnection>scm:git:https://github.com:443/skltp-incubator/vp-camel.git
+    </developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -203,16 +223,16 @@
             </goals>
           </execution>
           <!--<execution>-->
-              <!--<id>pre-integration-test</id>-->
-              <!--<goals>-->
-                <!--<goal>start</goal>-->
-              <!--</goals>-->
+          <!--<id>pre-integration-test</id>-->
+          <!--<goals>-->
+          <!--<goal>start</goal>-->
+          <!--</goals>-->
           <!--</execution>-->
           <!--<execution>-->
-              <!--<id>post-integration-test</id>-->
-              <!--<goals>-->
-                <!--<goal>stop</goal>-->
-              <!--</goals>-->
+          <!--<id>post-integration-test</id>-->
+          <!--<goals>-->
+          <!--<goal>stop</goal>-->
+          <!--</goals>-->
           <!--</execution>-->
         </executions>
       </plugin>
@@ -222,22 +242,23 @@
         <artifactId>camel-maven-plugin</artifactId>
         <version>${camel.version}</version>
         <!-- allows to fail if not all routes are fully covered during testing -->
-<!--
-        <configuration>
-          <failOnError>true</failOnError>
-        </configuration>
--->
+        <!--
+                <configuration>
+                  <failOnError>true</failOnError>
+                </configuration>
+        -->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
-            <systemPropertyVariables>
-              <!-- Seems to be som kind of conflict with JAXB camel dependencies and JDK8 Jaxb impl.
-              https://stackoverflow.com/questions/42499436/classcastexception-cannot-be-cast-to-com-sun-xml-internal-bind-v2-runtime-refle -->
-              <com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>true</com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>
-            </systemPropertyVariables>
+          <systemPropertyVariables>
+            <!-- Seems to be som kind of conflict with JAXB camel dependencies and JDK8 Jaxb impl.
+            https://stackoverflow.com/questions/42499436/classcastexception-cannot-be-cast-to-com-sun-xml-internal-bind-v2-runtime-refle -->
+            <com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>true
+            </com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
       <plugin>
@@ -248,7 +269,8 @@
           <!-- Seems to be som kind of conflict with JAXB camel dependencies and JDK8 Jaxb impl.
           https://stackoverflow.com/questions/42499436/classcastexception-cannot-be-cast-to-com-sun-xml-internal-bind-v2-runtime-refle -->
           <systemPropertyVariables>
-            <com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>true</com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>
+            <com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>true
+            </com.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize>
           </systemPropertyVariables>
 
           <!--Make failsafe and spring-boot repackage play nice together
@@ -267,5 +289,91 @@
     </plugins>
   </build>
 
-
+  <profiles>
+    <profile>
+      <id>test-coverage</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${surefireArgLine}</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <argLine>${failsafeArgLine}</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>pre-unit-test</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                  <destFile>${sonar.jacoco.reportPath}</destFile>
+                  <propertyName>surefireArgLine</propertyName>
+                </configuration>
+              </execution>
+              <execution>
+                <id>post-unit-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <dataFile>${jacoco.reportPath}</dataFile>
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>pre-integration-test</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                  <destFile>${sonar.jacoco.itReportPath}</destFile>
+                  <propertyName>failsafeArgLine</propertyName>
+                </configuration>
+              </execution>
+              <execution>
+                <id>post-integration-test</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <dataFile>${jacoco.reportPath}</dataFile>
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
