--- a/jenkins/pipelines/develop_build/Jenkinsfile
+++ b/jenkins/pipelines/develop_build/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                 configFileProvider([configFile(fileId: "${CONFIG_FILE_ID}", variable: 'MAVEN_SETTINGS')]) {
                     sh 'pwd'
                     echo 'Compiling, testing and building...'
-                    sh 'mvn --global-settings ${MAVEN_SETTINGS} clean install'
+                    sh 'mvn --global-settings ${MAVEN_SETTINGS} -P test-coverage clean install'
                 }
             }     
         }        
