--- a/jenkins/pipelines/develop_build/Jenkinsfile
+++ b/jenkins/pipelines/develop_build/Jenkinsfile
@@ -3,7 +3,6 @@ pipeline {
     environment{
         JDK_PATH = tool name: 'Java 8_152'
         JAVA_HOME = "${JDK_PATH}"
-        CONFIG_FILE_ID = 'byggReleaseConfig'
         MAVEN_IMAGE = 'maven:3.6-jdk-8'
     }
 
@@ -18,7 +17,7 @@ pipeline {
             }
             steps {
                 echo 'Starting Build stage...'
-                configFileProvider([configFile(fileId: "${CONFIG_FILE_ID}", variable: 'MAVEN_SETTINGS')]) {
+                configFileProvider([configFile(fileId: "${params.CONFIG_FILE_ID}", variable: 'MAVEN_SETTINGS')]) {
                     sh 'pwd'
                     echo 'Compiling, testing and building...'
                     sh 'mvn --global-settings ${MAVEN_SETTINGS} -P test-coverage clean install'
@@ -37,14 +36,20 @@ pipeline {
 
         unsuccessful {
             echo 'Build unsuccessful'
-            emailext attachLog: true, recipientProviders: [[$class: 'CulpritsRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: "Build failed in Jenkins: ${JOB_NAME}#${BUILD_NUMBER}", body: "See ${BUILD_URL} for details."
+            emailext attachLog: true, 
+                subject: "Build failed in Jenkins: ${JOB_NAME}#${BUILD_NUMBER}", 
+                body: "See ${BUILD_URL} for details.",
+                to: "${params.EMAIL_RECIPIENTS}"
         }
 
         changed {
             script {
                 if ("${currentBuild.currentResult}" == 'SUCCESS') {
                     echo "Current build successful, previous build was unsuccessful"
-                    emailext attachLog: true, recipientProviders: [[$class: 'CulpritsRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: "${JOB_NAME} back to stable", body: "See ${BUILD_URL} for details."
+                    emailext attachLog: true, 
+                        subject: "${JOB_NAME} back to stable", 
+                        body: "See ${BUILD_URL} for details.",
+                        to: "${params.EMAIL_RECIPIENTS}"        
                 }
             }
         }
