--- a/jenkins/pipelines/develop_build/Jenkinsfile
+++ b/jenkins/pipelines/develop_build/Jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
-    //Testing
     agent any
     environment{
         JDK_PATH = tool name: 'Java 8_152'
         JAVA_HOME = "${JDK_PATH}"
         MAVEN_IMAGE = 'maven:3.6-jdk-8'
+        HEJ = "1234"
     }
 
     stages {
