Get status - test

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -16,6 +16,8 @@ vp.https.route.url = https://${vp.host}:1024/vp
 vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
 vp.reset.cache.url=http://${vp.host}:23000/resetcache
 
+vp.http.get.url=http://${vp.host}:80/get
+
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
 #camel.springboot.duration-max-messages=100
