Get status: processor, route.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -15,6 +15,7 @@ vp.https.route.url = https://${vp.host}:443/vp
 
 vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
 vp.reset.cache.url=http://${vp.host}:23000/resetcache
+vp.http.get.url=http://${vp.host}:80/get
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
