--- a/vp-services-camel/src/main/resources/application-security.properties
+++ b/vp-services-camel/src/main/resources/application-security.properties
@@ -1,5 +1,5 @@
 # Security settings
-tp.tls.store.location=C:/SpringBootVP/certs/
+tp.tls.store.location=/certs/
 
 tp.tls.store.truststore.type=jks
 tp.tls.store.truststore.file=truststore.jks
