--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -7,13 +9,14 @@
     <groupId>se.skltp.vp</groupId>
     <artifactId>vp-parent-camel</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath/>
   </parent>
 
-    <groupId>se.skltp.vp</groupId>
-    <artifactId>vp-services-camel</artifactId>
-    <name>vp-services-camel</name>
-    <version>1.0.0-SNAPSHOT</version>
-    <description>SKLTP VP Services byggt med Camel och Spring Boot</description>
+  <groupId>se.skltp.vp</groupId>
+  <artifactId>vp-services-camel</artifactId>
+  <name>vp-services-camel</name>
+  <version>1.0.0-SNAPSHOT</version>
+  <description>SKLTP VP Services byggt med Camel och Spring Boot</description>
 
 
   <dependencies>
@@ -27,10 +30,10 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-tomcat</artifactId>
         </exclusion>
-          <!--<exclusion>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-logging</artifactId>-->
-          <!--</exclusion>-->
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-logging</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -52,16 +55,16 @@
       <optional>true</optional>
     </dependency>
 
-     <!--skltp-->
+    <!--skltp-->
     <dependency>
       <groupId>se.skltp.takdatahandler</groupId>
       <artifactId>behorighethandler</artifactId>
-      <version>1.0.0</version>
+      <version>${takdatahandler.version}</version>
     </dependency>
     <dependency>
       <groupId>se.skltp.takdatahandler</groupId>
       <artifactId>vagvalhandler</artifactId>
-      <version>1.0.0</version>
+      <version>${takdatahandler.version}</version>
     </dependency>
 
     <!-- Camel -->
@@ -127,5 +130,22 @@
     </dependency>
   </dependencies>
 
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot-version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
