--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-external-config.html#boot-features-external-config-application-property-files
 # Lägger man en application.properties i en undermapp med namn config/ där man kör jar filen så overidear värden därifrån värden från denna fil.
 
+server.port=8880
+
 spring.profiles.include=security
 
 # the name of Camel
@@ -71,7 +73,7 @@ ip.whitelist=127.0.0.1
 propagateCorrelationIdForHttps=false
 
 # List if files to be read by HSA cache, first file is master, rest is complementary
-hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
+hsa.files=c:/vp/hsaFiles/hsacache.xml,c:/vp/hsaFiles/hsacachecomplementary.xml
 
 # Defines if we should use old style default routing (VG#VE) when
 #  evaluating vägval and behörigheter. Set this to blank to
@@ -83,9 +85,9 @@ takcache.use.behorighet.cache=true
 takcache.use.vagval.cache=true
 takcache.vagval.persistent.file.name=
 takcache.behorighet.persistent.file.name=
-takcache.endpoint.address=http://localhost:8080/tak-services/SokVagvalsInfo/v2
+takcache.endpoint.address=http://localhost:8882/takmockservice
 
 timeout.json.file=timeoutconfig.json
 timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
-wsdlfiles.directory=C:/wsdl/
+wsdlfiles.directory=C:/vp/wsdl/
