--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -89,3 +89,8 @@ timeout.json.file=timeoutconfig.json
 timeout.json.file.default.tjanstekontrakt.name=default_timeouts
 wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/wsdl/
+
+#Regexp to filter/remove prevent certain headers from being propagated to producer
+headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|Content-Type|PEER_CERTIFICATES
+#Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
+headers.reg.exp.keepRegExp=(?i)x-rivta.*
