NTP-822: Implement initial message logging

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -34,43 +34,21 @@ endpoints.health.enabled = true
 endpoints.camelroutes.enabled = true
 endpoints.camelroutes.read-only = true
 
- to configure logging levels
-logging.level.org.springframework = INFO
-logging.level.org.apache.camel.spring.boot = INFO
-logging.level.org.apache.camel.impl = DEBUG
-logging.level.sample.camel = DEBUG
-
-# Security settings
-#tp.tls.store.location = C:/SpringBootVP/certs/
-#
-#tp.tls.store.truststore.type = jks
-#tp.tls.store.truststore.file = truststore.jks
-#tp.tls.store.truststore.password = password
-#
-#tp.tls.store.producer.type = jks
-#tp.tls.store.producer.file = tp.jks
-#tp.tls.store.producer.password = password
-#tp.tls.store.producer.keyPassword = password
-#
-#tp.tls.store.consumer.type = jks
-#tp.tls.store.consumer.file = client.jks
-#tp.tls.store.consumer.password = password
-#tp.tls.store.consumer.keyPassword = password
-#
-#tp.tls.allowedIncomingProtocols=TLSv1,TLSv1.1,TLSv1.2
-#tp.tls.allowedOutgoingProtocols=TLSv1,TLSv1.1,TLSv1.2
 
 # Key where to find senderid in certificate
 certificate.senderid.subject=SERIALNUMBER
 
-# Header name where to find consumer IP address (set by forward proxy)
-vagvalrouter.sender.ip.adress.http.header=X-Forwarded-For
+# Reverse proxy/LB header names
+http.forwarded.header.for=X-Forwarded-For
+http.forwarded.header.host=X-Forwarded-Host
+http.forwarded.header.port=X-Forwarded-Port
+http.forwarded.header.proto=X-Forwarded-Proto
 
 #comma-separated
 ip.whitelist=127.0.0.1
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
-propagateCorrelationIdForHttps=false
+propagate.correlation.id.for.https=false
 
 # List if files to be read by HSA cache, first file is master, rest is complementary
 hsa.files=c:/vp/hsaFiles/hsacache.xml,c:/vp/hsaFiles/hsacachecomplementary.xml
