Made user-agent and content-type configurable.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -50,6 +50,12 @@ ip.whitelist=127.0.0.1
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
 
+#User-Agent for outgoing requests from VP
+vp.header.user.agent = "SKLTP VP/3.1";
+
+#Content type for outgoing requests from VP
+vp.header.content.type = "text/xml; charset=UTF-8";
+
 # List if files to be read by HSA cache, first file is master, rest is complementary
 hsa.files=c:/vp/hsaFiles/hsacache.xml,c:/vp/hsaFiles/hsacachecomplementary.xml
 
