Made user-agent and content-type configurable.

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -44,6 +44,12 @@ ip.whitelist=1.2.3.4,5.6.7.8
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
 
+#User-Agent for outgoing requests from VP
+vp.header.user.agent = "SKLTP VP/3.1";
+
+#Content type for outgoing requests from VP
+vp.header.content.type = "text/xml; charset=UTF-8";
+
 # Reverse proxy/LB header names
 http.forwarded.header.for=X-Forwarded-For
 http.forwarded.header.host=X-Forwarded-Host
