User-agent and Content-type added to config.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -27,13 +27,13 @@ vp.http.get.url=http://${vp.host}:80/get
 #camel.springboot.duration-max-idle-seconds=15
 
 # all access to actuator endpoints without security
-management.security.enabled = false
+management.security.enabled=false
 # turn on actuator health check
-endpoints.health.enabled = true
+endpoints.health.enabled=true
 
 # allow to obtain basic information about camel routes (read only mode)
-endpoints.camelroutes.enabled = true
-endpoints.camelroutes.read-only = true
+endpoints.camelroutes.enabled=true
+endpoints.camelroutes.read-only=true
 
 # Key where to find senderid in certificate
 certificate.senderid.subject=SERIALNUMBER
@@ -51,10 +51,10 @@ ip.whitelist=127.0.0.1
 propagate.correlation.id.for.https=false
 
 #User-Agent for outgoing requests from VP
-vp.header.user.agent = "SKLTP VP/3.1";
+vp.header.user.agent=SKLTP VP/3.1
 
 #Content type for outgoing requests from VP
-vp.header.content.type = "text/xml; charset=UTF-8";
+vp.header.content.type=text/xml;charset=UTF-8
 
 # List if files to be read by HSA cache, first file is master, rest is complementary
 hsa.files=c:/vp/hsaFiles/hsacache.xml,c:/vp/hsaFiles/hsacachecomplementary.xml
