--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 8085
 spring.profiles.include=security
 
 # the name of Camel
-camel.springboot.name = VP-Camel-Test
+camel.springboot.name = vp-services-test
 
 vp.instance.id=dev_env
 
@@ -53,7 +53,7 @@ http.forwarded.header.proto=X-Forwarded-Proto
 #  turn default routing off.
 vagvalrouter.default.routing.address.delimiter=#
 
-hsa.files=c:/ntjp/vp-camel_hsaFiles/hsacache.xml,c:/ntjp/vp-camel_hsaFiles/hsacachecomplementary.xml
+hsa.files=classpath:hsacache.xml,classpath:hsacachecomplementary.xml
 
 takcache.use.behorighet.cache=true
 takcache.use.vagval.cache=true
