NTP-822: Create base for test of logging

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8880
 spring.profiles.include=security
 
 # the name of Camel
-camel.springboot.name = VP-Camel
+camel.springboot.name = vp-services
 
 vp.instance.id=dev_env
 
