Added consumerList in application.properties.

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -38,8 +38,11 @@ endpoints.camelroutes.read-only = true
 # Key where to find senderid in certificates subject
 certificate.senderid.subject=OU
 
-#comma seperated
+#comma seperated, this param can be empty but NOT null
 ip.whitelist=1.2.3.4,5.6.7.8
+
+#comma separated, this param can be empty but NOT null
+ip.consumer.list=127.0.0.1,127.0.0.2,tp
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
@@ -76,3 +79,5 @@ wsdlfiles.directory=C:/vp/wsdl/
 headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES
 #Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-rivta.*
+#Added just for convenience. Not used in code.
+status.current.labels=ServiceStatus,Uptime,ManagementName,JavaVersion,CamelVersion,TakserviceInitialized,JvmTotalMemory,JvmFreeMemory,JvmUsedMemory,JvmMaxMenory
