Using flag to determine if consumerList shall be used to verify senders use of ORIGINAL_SERVICE_CONSUMER_HSA_ID.

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -44,6 +44,9 @@ ip.whitelist=127.0.0.1,1.2.3.4,5.6.7.8
 #comma separated, this param can be empty but NOT null
 ip.consumer.list=127.0.0.1,127.0.0.2,tp
 
+#Property to determine if the ip.consumer.list should be enforced or not
+ip.consumer.list.use=true
+
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
 
