Boolean enforceConsumerList set to true as default. Whitelist and Consumerlist can be null, not set in config.

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -44,8 +44,15 @@ http.forwarded.header.host=X-Forwarded-Host
 http.forwarded.header.port=X-Forwarded-Port
 http.forwarded.header.proto=X-Forwarded-Proto
 
-#comma-separated
+#comma-separated, this param can be empty
 ip.whitelist=127.0.0.1
+
+#comma separated, this param can be empty
+ip.consumer.list=
+
+#Property to determine if the ip.consumer.list should be enforced or not, this param can be empty
+#WARNING: If not existing, the default value is true.
+ip.consumer.list.use=false
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
