lösning av camel problem med url "optimering"

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -73,6 +73,6 @@ wsdl.json.file=wsdlconfig.json
 wsdlfiles.directory=C:/vp/wsdl/
 
 #Regexp to filter/remove prevent certain headers from being propagated to producer
-headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES
+headers.reg.exp.removeRegExp=(?i)rivversion|wsdl_namespace|x-vp-auth-cert|servicecontract_namespace|http.disable.status.code.exception.check|PEER_CERTIFICATES|CamelHttpPath
 #Regexp to prevent certain headers from being filtered/removed (when propagated to producer)
 headers.reg.exp.keepRegExp=(?i)x-rivta.*
