Cleaned up according to Sonar ;)

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -38,13 +38,14 @@ endpoints.camelroutes.read-only = true
 # Key where to find senderid in certificates subject
 certificate.senderid.subject=OU
 
-#comma seperated
+#comma seperated, this param can be empty
 ip.whitelist=127.0.0.1,1.2.3.4,5.6.7.8
 
-#comma separated, this param can be empty but NOT null
+#comma separated, this param can be empty
 ip.consumer.list=127.0.0.1,127.0.0.2,tp
 
-#Property to determine if the ip.consumer.list should be enforced or not
+#Property to determine if the ip.consumer.list should be enforced or not, this param can be empty.
+#WARNING: If not existing, the default value is true.
 ip.consumer.list.use=true
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
