--- a/vp-services-camel/src/main/resources/vp-messages.properties
+++ b/vp-services-camel/src/main/resources/vp-messages.properties
@@ -10,3 +10,4 @@ VP009 = Error connecting to service producer at address %s
 VP010 = Physical Address field is empty in Service Producer for %s
 VP011 = Caller was not on the white list of accepted IP-addresses. %s
 VP012 = Server problem, VP does not have all necessary resources to operate. %s
+VP013 = Sender was not on the approved list to use the header X_RIVTA_ORIGINAL_SERVICE_CONSUMER_HSA_ID.
