--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -17,7 +17,7 @@ vp.https.route.url = https://${vp.host}:443/vp
 
 vp.hsa.reset.cache.url=http://${vp.host}:24000/resethsacache
 vp.reset.cache.url=http://${vp.host}:23000/resetcache
-#vp.status.url=http://${vp.host}:1080/status
+vp.status.url=http://${vp.host}:1080/status
 
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
@@ -66,8 +66,7 @@ vagvalrouter.default.routing.address.delimiter=#
 
 takcache.use.behorighet.cache=true
 takcache.use.vagval.cache=true
-takcache.vagval.persistent.file.name=
-takcache.behorighet.persistent.file.name=
+takcache.persistent.file.name=c:/tmp/vp-camel/local-tak-cache.xml
 takcache.endpoint.address=http://localhost:8882/takmockservice
 
 timeout.json.file=timeoutconfig.json
