--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.profiles.include=security
 # the name of Camel
 camel.springboot.name = vp-services
 
+# Hawtio
+management.endpoints.web.exposure.include=hawtio,jolokia
+hawtio.authenticationEnabled=false
+
 vp.instance.id=dev_env
 
 vp.host=localhost
