--- a/vp-services-camel/pom.xml
+++ b/vp-services-camel/pom.xml
@@ -129,6 +129,11 @@
     </dependency>
 
     <dependency>
+      <groupId>io.hawt</groupId>
+      <artifactId>hawtio-springboot</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.xmlunit</groupId>
       <artifactId>xmlunit-core</artifactId>
       <version>2.6.2</version>
