Test config and methods to test JIRA NTP-832

--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -42,7 +42,7 @@ certificate.senderid.subject=OU
 ip.whitelist=127.0.0.1,1.2.3.4,5.6.7.8
 
 #comma separated, this param can be empty
-ip.consumer.list=127.0.0.1,127.0.0.2,tp
+ip.consumer.list=127.0.0.1,127.0.0.2,tp,TSTNMT2321000156-B02
 
 #Property to determine if the ip.consumer.list should be enforced or not, this param can be empty.
 #WARNING: If not existing, the default value is true.
