--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -56,7 +56,7 @@ ip.consumer.list=
 
 #Property to determine if the ip.consumer.list should be enforced or not, this param can be empty
 #WARNING: If not existing, the default value is true.
-ip.consumer.list.use=false
+ip.consumer.list.enforce=false
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
