--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -46,7 +46,7 @@ ip.consumer.list=127.0.0.1,127.0.0.2,tp,TSTNMT2321000156-B02
 
 #Property to determine if the ip.consumer.list should be enforced or not, this param can be empty.
 #WARNING: If not existing, the default value is true.
-ip.consumer.list.use=true
+ip.consumer.list.enforce=true
 
 #Property if correlation id is to be propagated to producer or not, for HTTPS traffic
 propagate.correlation.id.for.https=false
