SKLTP-1244 fix problrm med senderId som hämtar vi  från cert

--- a/vp-services-camel/src/main/resources/application.properties
+++ b/vp-services-camel/src/main/resources/application.properties
@@ -40,7 +40,7 @@ endpoints.camelroutes.enabled=true
 endpoints.camelroutes.read-only=true
 
 # Key where to find senderid in certificate
-certificate.senderid.subject=SERIALNUMBER
+certificate.senderid.subject.pattern=(?:2.5.4.5|SERIALNUMBER)=([^,]+)
 
 # Reverse proxy/LB header names
 http.forwarded.header.for=X-Forwarded-For
