--- a/vp-services-camel/src/test/resources/application.properties
+++ b/vp-services-camel/src/test/resources/application.properties
@@ -36,7 +36,7 @@ endpoints.camelroutes.enabled = true
 endpoints.camelroutes.read-only = true
 
 # Key where to find senderid in certificates subject
-certificate.senderid.subject=OU
+certificate.senderid.subject.pattern=OU=([^,]+)
 
 #comma seperated, this param can be empty
 ip.whitelist=127.0.0.1,1.2.3.4,5.6.7.8
